# rust-lambda-s3-tagging-sqs

./: .gitignore  Cargo.toml  Makefile  Readme.md  template.yaml
src/: generate_tags.rs  lib.rs  main.rs
